# docs/swagger.json
@@ -264,7 +264,8 @@
             "post": {
                 "description": "对指定照片生成边框水印图片,并且直接输出图片内容",
                 "produces": [
-                    "image/jpeg"
+                    "image/jpeg",
+                    "image/png"
                 ],
                 "tags": [
                     "Frame"
@@ -610,10 +611,16 @@
                 "borderLeftWidth": {
                     "type": "integer"
                 },
+                "borderRadius": {
+                    "type": "integer"
+                },
                 "borderRightWidth": {
                     "type": "integer"
                 },
                 "borderTopHeight": {
+                    "type": "integer"
+                },
+                "isblur": {
                     "type": "integer"
                 },
                 "sourceHeight": {
